--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "gulp-sass": "^3.1.0",
     "gulp-sourcemaps": "^2.6.1",
     "gulp-uglify": "^3.0.0",
+    "pump": "^2.0.0",
     "run-sequence": "^2.2.0"
   },
   "scripts": {
